# lg-magent-mvp

./: .env.example  .gitignore  README.md  README_OLD.md  debug_page3_images.py  pyproject.toml  pytest.ini  report.json  test_report.json
.cache/faiss/32e63ff57b3d4f1e/: index.faiss  index.pkl  meta.json
.cache/faiss/4ae75e04f7232f44/: index.faiss  index.pkl  meta.json
.cache/summary/b860934979b3dd41/: content.json  meta.json
.cache/summary/deb1c1e981cd3fff/: content.json  meta.json
data/: README.md
examples/: structured_planning_example.py
lg_magent_mvp/: EMBEDDING_GUIDE.md  app.py  cli.py  config.py  indexing.py  messages.py  models.py  orchestrator.py  pdf.py  preface.py  schemas.py  state_manager.py
lg_magent_mvp.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lg_magent_mvp/examples/: sentence_transformers_example.py
lg_magent_mvp/nodes/: README.md  __init__.py  approval.py  finalize.py  indexing.py  plan.py  search.py  summary.py  tables.py  vision.py
lg_magent_mvp/tools/: retrievers.py
output/: MM155 Deines Chiropractic-1_content.json
output/indexing/: Amaryllis_chiropractic_report_content.json  MM155 Deines Chiropractic-1_content.json
test/: test_approval.py  test_e2e.py  test_finalize.py  test_hybrid_pdf_sumary.py  test_keyword_matches_in_page.py  test_keyword_search.py  test_llm_call.py  test_pdf_read.py  test_pdf_summary_poc1.py  test_references.py  test_retrievers.py  test_router.py  test_schemas.py  test_state_management.py  test_summary.py  test_tables_figures.py
